--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-snackbar": "^2.2.1",
     "es6-promise-plugin": "^4.2.2",
-    "phonegap-plugin-battery-status": "^1.0.0"
+    "phonegap-plugin-battery-status": "^1.0.0",
+	"eslint": ">=4.18.2"
   },
   "devDependencies": {
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+	"eslint": ">=4.18.2"
   },
   "cordova": {
     "plugins": {
